# sysnarrator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  GETTING_STARTED.md  HTOP_FEATURES.md  LICENSE  PROFESSIONAL.md  README.md  USER_GUIDE.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md
sysnarrator/: __init__.py  __main__.py  cli.py  expert_analyzer.py  narrator.py  professional_cli.py
sysnarrator/collectors/: __init__.py  cpu.py  disk.py  memory.py  network.py  processes.py  temperature.py
sysnarrator/formatters/: __init__.py  json_fmt.py  plain.py  professional.py  terminal.py
tests/: test_narrator.py
